feat: reduce paddings

--- a/about.html
+++ b/about.html
@@ -196,22 +196,26 @@
 
                 <p class="intro">La Transfo est un programme expérimental et inter-collectivités, mené en partenariat
                     avec la
-                    Mairie de Paris, la ville de Mulhouse et Mulhouse-Alsace-Agglomération, la Communauté urbaine de
-                    Dunkerque et la Région Occitanie, la
+                    <a href="https://www.paris.fr/" target="_blank">Mairie de Paris</a>, la
+                    <a href="https://www.mulhouse.fr/" target="_blank">ville de Mulhouse</a> et
+                    <a href="https://www.mulhouse-alsace.fr/" target="_blank">Mulhouse-Alsace-Agglomération</a>, la
+                    <a href="https://www.communaute-urbaine-dunkerque.fr/" target="_blank">Communauté urbaine de
+                        Dunkerque</a> et la
+                    <a href="https://www.laregion.fr/">Région Occitanie</a>, la
                     <a href="https://www.lillemetropole.fr/" target="_blank">Métropole Européenne de Lille</a>, la
                     <a href="https://www.metzmetropole.fr/" target="_blank">Métropole de Metz</a> et
                     <a href="https://www.strasbourg.eu/eurometropole-de-strasbourg" target="_blank">L’Eurométropole de
-                        Strasbourg</a>.
-                    Il est soutenu par la fondation Bloomberg Philanthropies.
+                        Strasbourg</a>. Il est soutenu par la
+                    <a href="https://www.bloomberg.org/" target="_blank">fondation Bloomberg Philanthropies</a>.
                 </p>
 
                 <!-- LINKS-BOX -->
 
-                <div>
-                    <div class="links-box">
-                        <img src="images/logos/logosPartners.png" alt="logos des métropoles partenaires de la Transfo">
-                    </div>
+
+                <div class="links-box">
+                    <img src="images/logos/logosPartners.png" alt="logos des métropoles partenaires de la Transfo">
                 </div>
+
 
             </section>
 
