--- a/english.html
+++ b/english.html
@@ -1545,15 +1545,15 @@
                         style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
-                            <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o" allowfullscreen></iframe>
-                            </iframe>
-                        </figure>
-
-                        <figure>
-                            <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe class="iframe" src="https://www.youtube.com/embed/b5meDHC_T4I"
-                                allowfullscreen></iframe>
+                            <a class="figcaption" href="https://www.youtube.com/embed/NxzhQxeZS8o"
+                                target="_blank">“Témoignage d’ambassadeurs” (Strasbourg)</a>
+                            <iframe class="iframe" src="https://www.youtube.com/embed/NxzhQxeZS8o" </iframe> </figure>
+                                <figure>
+                                <a class="figcaption" href="https://www.youtube.com/embed/b5meDHC_T4I"
+                                    target="_blank">“Conseil aux ambassadeurs par des
+                                    ambassadeurs” (Lille)</a>
+                                <iframe class="iframe" src="https://www.youtube.com/embed/b5meDHC_T4I"
+                                    allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
@@ -2025,24 +2025,27 @@
                         <strong>Yolaine Soares</strong> (Accueil à la population) :
                     </p>
 
-                    <!-- VDEO -->
+                    <!-- VIDEO -->
 
                     <div class="links-box video"
                         style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
-                            <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/cpTZdel6G_k"
+                                target="_blank">Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</a>
                             <iframe src="https://www.youtube.com/embed/cpTZdel6G_k" allowfullscreen></iframe>
                         </figure>
 
                         <figure>
-                            <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet?
-                            </figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/hiKdEPQrm5A"
+                                target="_blank">Qu'avez vous apprécié dans l'implication de La Transfo sur votre
+                                projet?</a>
                             <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A" allowfullscreen></iframe>
                         </figure>
 
                         <figure>
-                            <figcaption>En quoi la démarche Transfo a fait évoluer votre projet?</figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/vFwH-9JuNVo" target="_blank">En
+                                quoi la démarche Transfo a fait évoluer votre projet?</a>
                             <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo" allowfullscreen></iframe>
                         </figure>
 
@@ -2872,9 +2875,9 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
-        <a href="index.html">En francais</a>
-    </footer>
+    <!-- <footer>
+        <a href="index.html">Accéder au site en francais</a>
+    </footer> -->
 
     <script src="js/script.js"></script>
 </body>
