--- a/index.html
+++ b/index.html
@@ -1548,13 +1548,15 @@
                         style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
-                            <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/NxzhQxeZS8o"
+                                target="_blank">“Témoignage d’ambassadeurs” (Strasbourg)</a>
                             <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o" allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
                         <figure>
-                            <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/b5meDHC_T4I"
+                                target="_blank">“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</a>
                             <iframe class="iframe" src="https://www.youtube.com/embed/b5meDHC_T4I"
                                 allowfullscreen></iframe>
                             </iframe>
@@ -2028,24 +2030,29 @@
                         <strong>Yolaine Soares</strong> (Accueil à la population) :
                     </p>
 
-                    <!-- VDEO -->
+                    <!-- VIDEO -->
 
                     <div class="links-box video"
                         style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
-                            <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/cpTZdel6G_k"
+                                target="_blank">Qu'est ce qui vous a motivé à prendre contact
+                                avec La Transfo?</a>
                             <iframe src="https://www.youtube.com/embed/cpTZdel6G_k" allowfullscreen></iframe>
                         </figure>
 
                         <figure>
-                            <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet?
-                            </figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/hiKdEPQrm5A"
+                                target="_blank">Qu'avez vous apprécié dans l'implication de La
+                                Transfo sur votre projet?</a>
                             <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A" allowfullscreen></iframe>
                         </figure>
 
                         <figure>
-                            <figcaption>En quoi la démarche Transfo a fait évoluer votre projet?</figcaption>
+                            <a class="figcaption" href="https://www.youtube.com/embed/vFwH-9JuNVo" target="_blank">En
+                                quoi la démarche Transfo a fait évoluer
+                                votre projet?</a>
                             <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo" allowfullscreen></iframe>
                         </figure>
 
@@ -2734,21 +2741,18 @@
                         <p>
                             <a href="assets/outils/project/4-engagement-occitanie.pdf"
                                 download="lettre_engagement_occitanie" target="_blank">Exemple de lettre d’engagement
-                                des contributeurs<br>
-                                (Occitanie)
+                                des contributeurs (Occitanie)
                             </a>
                         </p>
                         <p>
                             <a href="assets/outils/project/5-engagement-mulhouse.pdf"
                                 download="lettre_engagement_mulhouse" target="_blank">Exemple de lettre d’engagement des
-                                contributeurs<br>
-                                (Mulhouse)
+                                contributeurs (Mulhouse)
                             </a>
                         </p>
                         <p>
                             <a href="assets/outils/project/6-engagement-paris.pdf" download="lettre_engagement_paris"
-                                target="_blank">Exemple de lettre d’engagement des contributeurs<br>
-                                (Paris)
+                                target="_blank">Exemple de lettre d’engagement des contributeurs (Paris)
                             </a>
                         </p>
                         <p>
@@ -2877,9 +2881,9 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
-        <a href="english.html">In english</a>
-    </footer>
+    <!-- <footer>
+        <a href="english.html">Switch to english</a>
+    </footer> -->
 
     <script src="js/script.js"></script>
 </body>
