feat: switch language without flag

--- a/about.html
+++ b/about.html
@@ -234,7 +234,8 @@
                                     <img src="images/about/transfo-twitter.png" alt="logo twitter">
                                 </a>
                             </li>
-                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
+                            <li> <a href="https://www.linkedin.com/company/la-27e-r%C3%A9gion/?originalSubdomain=fr"
+                                    target="_blank">
                                     <img src="images/about/transfo-linkedin.png" alt="logo linkedin">
                                 </a>
                             </li>
