feat: about english content

--- a/about-english.html
+++ b/about-english.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="images/logos/favicon.png" />
 </head>
 
-<body class="light">
+<body class="light english">
     <header class="mainNav sticky">
 
         <!-- NAV BAR -->
@@ -20,7 +20,7 @@
 
             <div class="logo_ctn">
                 <a href="english.html">
-                    <img src="images/logos/LogoNavBar.png" alt="logo La Transfo Code Source">
+                    <img src="images/logos/LogoNavBar.png" alt="La Transfo Code Source logo">
                 </a>
             </div>
 
@@ -35,7 +35,7 @@
                     <a class="hover_orange" href="faq-english.html">FAQ</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="cousins-english.html">Our cousins</a>
+                    <a class="hover_orange" href="cousins-english-wip.html">Our cousins</a>
                 </li>
                 <li>
                     <a class="hover_orange" href="about.html"><img
@@ -57,7 +57,7 @@
             <div class="container">
 
                 <div>
-                    <img class="logo " src="images/logos/logoAbout-laTransfo.svg" alt="logo La Transfo Code Sources">
+                    <img class="logo " src="images/logos/logoAbout-laTransfo.svg" alt="La Transfo Code Source logo">
                 </div>
                 <p>
                     <a href="english.html">Close</a>
@@ -79,27 +79,30 @@
 
                 <article class="container intro-mobil">
 
-                    <p>La Transfo Code Source <strong class="black">« open source » * le protocole de création de
-                            laboratoires d’innovation internes</strong> aux collectivités territoriales, expérimenté
-                        lors du programme La Transfo entre 2016 et 2020. Sept principes actifs composent La Transfo:
-                        <strong id="experimental-mobile">poser un cadre expérimental</strong> (ce),
-                        <strong id="multidisciplinary-mobile">passer en mode pluridisciplinaire</strong> (mp),
-                        <strong id="programRhythm-mobile">rythmer le programme</strong> (p),
-                        <strong id="involveAndForm-mobile">impliquer et former les agents</strong> (a),
-                        <strong id="concreteCase-mobile">travailler à partir de cas concrets</strong> (cc),
-                        <strong id="ecosysteme-mobile">s’appuyer sur l'écosystème</strong> (e),
-                        <strong id="project-mobile">se projeter dans le futur labo</strong> (fl).
-                        Ce site vise à expliciter ces principes et apporte un retour d’expérience sur leur mise
-                        en oeuvre dans les différentes collectivités engagées dans La Transfo. L’objectif est de
-                        permettre à chacun de se réapproprier et d’ajuster ces principes d’action à son contexte.
+                    <p>The La Transfo source code is open source* and comprises <strong class="black">the protocol for
+                            creating innovation laboratories</strong> within regional and local authorities; the first
+                        experiments in setting up La Transfo labs took place between 2016 and 2020. The protocol
+                        consists of implementing seven principal actions:
+                        set up an <strong id="experimental-mobile">experimental framework</strong> (ce),
+                        establish a <strong id="multidisciplinary-mobile">multi-disciplinary approach</strong> (mp),
+                        pace <strong id="programRhythm-mobile">program rollout</strong> (p),
+                        involve and train the <strong id="involveAndForm-mobile">public agents</strong> (a),
+                        work on the basis of <strong id="concreteCase-mobile">concrete practical cases</strong> (cc),
+                        build support from the surrounding administrative <strong
+                            id="ecosysteme-mobile">ecosystem</strong> (e),
+                        and anticipate/prepare for the <strong id="project-mobile">future lab</strong> (fl).
+                        The purpose of this site is to describe these actions and to provide feedback on their
+                        implementation in the various municipal/regional public services engaged in the protocol. The
+                        goal is to allow everyone to appropriate these actions and adjust them to his/her respective
+                        context.
+
                     </p>
-                    <p class="definition">* En informatique, le code source est un texte qui présente les
-                        instructions
-                        composant un programme sous une forme lisible, telles qu'elles ont été écrites dans un
-                        langage de programmation.<br>
-                        Dans la communauté open source, les développeurs mettent gratuitement le code source à
-                        disposition d’autres programmeurs pour inciter à la réutilisation de briques logicielles
-                        développées ailleurs et ainsi développer ou améliorer des logiciels à long terme.
+                    <p class="definition">* In data processing, the source code is text that presents the instructions
+                        making up a program in readable form, written in a programming language.<br>
+                        In an open source community, the program developers make the source code available to other
+                        programmers to encourage the reutilization of software developed elsewhere, by means of the
+                        open-source software framework BRICKS (Building Research for Integrated Cultural Knowledge
+                        Services), and thus to further develop and improve software over the long term.
                     </p>
 
                 </article>
@@ -116,40 +119,45 @@
                             style="background-image: url(images/about/about-legendes-1.svg), url(images/about/about-illustrations-1.png);">
 
                             <div class="side">
-                                <p>La Transfo Code Source <br>
-                                    <strong>« open source » * le protocole de création de laboratoires d’innovation
-                                        internes</strong> aux collectivités territoriales, expérimenté lors du programme
-                                    La Transfo entre 2016 et 2020. Sept principes actifs composent La Transfo :
+                                <p>The La Transfo source code<br>
+                                    is open source* and comprises <strong class="black">the protocol for
+                                        creating innovation laboratories</strong> within regional and local authorities;
+                                    the first experiments in setting up La Transfo labs took place between 2016 and
+                                    2020. The protocol consists of implementing seven principal actions:
                                 </p>
                             </div>
                             <ul>
                                 <li>
-                                    <p id="experimental"><span>un cadre expérimental</span> (ce)</p>
+                                    <p id="experimental">set up an <span>experimental framework</span> (ce)</p>
                                 </li>
                                 <li>
-                                    <p id="multidisciplinary"><span>passer en mode pluridisciplinaire</span> (mp)</p>
+                                    <p id="multidisciplinary">establish a <span>multi-disciplinary approach</span> (mp)
+                                    </p>
                                 </li>
                                 <li>
-                                    <p id="programRhythm"><span>rythmer le programme</span> (p)</p>
+                                    <p id="programRhythm">pace <span>program rollout</span> (p)</p>
                                 </li>
                                 <li>
-                                    <p id="involveAndForm"><span>impliquer et former les agents</span> (a)</p>
+                                    <p id="involveAndForm">involve and train the <span>public agents</span> (a)</p>
                                 </li>
                                 <li>
-                                    <p id="concreteCase"><span>travailler à partir de cas concrets</span> (cc)</p>
+                                    <p id="concreteCase">work on the basis of <span>concrete cases</span> (cc)
+                                    </p>
                                 </li>
                                 <li>
-                                    <p id="ecosysteme"><span>s’appuyer sur l'écosystème</span> (e)</p>
+                                    <p id="ecosysteme">build support from the
+                                        <!-- surrounding administrative -->
+                                        <span>ecosystem</span> (e)</p>
                                 </li>
                                 <li>
-                                    <p id="project"><span>se projeter dans le futur labo</span> (fl)</p>
+                                    <p id="project">anticipate/prepare for the <span>future lab</span> (fl)</p>
                                 </li>
                             </ul>
                             <div class="side">
-                                <p>Ce site vise à expliciter ces principes et apporte un retour d’expérience sur leur
-                                    mise en oeuvre dans les différentes collectivités engagées dans La Transfo.
-                                    L’objectif est de permettre à chacun de se réapproprier et d’ajuster ces principes
-                                    d’action à son contexte.
+                                <p>The purpose of this site is to describe these actions and to provide feedback on
+                                    their implementation in the various municipal/regional public services engaged in
+                                    the protocol. The goal is to allow everyone to appropriate these actions and adjust
+                                    them to his/her respective context.
                                 </p>
                             </div>
                         </div>
@@ -161,13 +169,13 @@
 
                             <div class="side definition">
 
-                                <p>* En informatique, le code source est un texte qui présente les instructions
-                                    composant un programme sous une forme lisible, telles qu'elles ont été écrites dans
-                                    un langage de programmation.<br>
-                                    Dans la communauté open source, les développeurs mettent gratuitement le code source
-                                    à disposition d’autres programmeurs pour inciter à la réutilisation de briques
-                                    logicielles développées ailleurs et ainsi développer ou améliorer des logiciels à
-                                    long terme.
+                                <p>* In data processing, the source code is text that presents the instructions making
+                                    up a program in readable form, written in a programming language.<br>
+                                    In an open source community, the program developers make the source code available
+                                    to other programmers to encourage the reutilization of software developed elsewhere,
+                                    by means of the open-source software framework BRICKS (Building Research for
+                                    Integrated Cultural Knowledge Services), and thus to further develop and improve
+                                    software over the long term.
                                 </p>
                             </div>
 
@@ -184,7 +192,7 @@
 
                 <div class="title-box">
 
-                    <h2>Nos partenaires</h2>
+                    <h2>Our parters</h2>
                     <div>
                         <p>MAY 04 2020</p>
                         <p>( No Model ) N°. 00P.001</p>
@@ -194,25 +202,25 @@
 
                 <!-- INTRO -->
 
-                <p class="intro">La Transfo est un programme expérimental et inter-collectivités, mené en partenariat
-                    avec la
-                    <a href="https://www.paris.fr/" target="_blank">Mairie de Paris</a>, la
-                    <a href="https://www.mulhouse.fr/" target="_blank">ville de Mulhouse</a> et
-                    <a href="https://www.mulhouse-alsace.fr/" target="_blank">Mulhouse-Alsace-Agglomération</a>, la
-                    <a href="https://www.communaute-urbaine-dunkerque.fr/" target="_blank">Communauté urbaine de
-                        Dunkerque</a> et la
-                    <a href="https://www.laregion.fr/">Région Occitanie</a>, la
-                    <a href="https://www.lillemetropole.fr/" target="_blank">Métropole Européenne de Lille</a>, la
-                    <a href="https://www.metzmetropole.fr/" target="_blank">Métropole de Metz</a> et
-                    <a href="https://www.strasbourg.eu/eurometropole-de-strasbourg" target="_blank">L’Eurométropole de
-                        Strasbourg</a>. Il est soutenu par la
-                    <a href="https://www.bloomberg.org/" target="_blank">fondation Bloomberg Philanthropies</a>.
+                <p class="intro">La Transfo is an experimental program carried out in partnership with the
+                    <a href="https://www.paris.fr/" target="_blank">City of Paris</a>, the
+                    <a href="https://www.mulhouse.fr/" target="_blank">City of Mulhouse</a> and
+                    <a href="https://www.mulhouse-alsace.fr/" target="_blank">Mulhouse-Alsace-Agglomeration</a>, the
+                    <a href="https://www.communaute-urbaine-dunkerque.fr/" target="_blank">Urban Community of
+                        Dunkirk</a>, the
+                    <a href="https://www.laregion.fr/">Région Occitanie</a>, the
+                    <a href="https://www.lillemetropole.fr/" target="_blank">European Metropolis of Lille</a>, the
+                    <a href="https://www.metzmetropole.fr/" target="_blank">Metropolis of Metz</a> and
+                    <a href="https://www.strasbourg.eu/eurometropole-de-strasbourg" target="_blank">The Eurometropolis
+                        of Strasbourg</a>.
+                    It is supported by the
+                    <a href="https://www.bloomberg.org/" target="_blank">Bloomberg Philanthropies Foundation</a>.
                 </p>
 
                 <!-- LINKS-BOX -->
 
                 <div class="links-box">
-                    <img src="images/logos/logosPartners.png" alt="logos des métropoles partenaires de la Transfo">
+                    <img src="images/logos/logosPartners.png" alt="La Transfo partners' logos">
                 </div>
 
             </section>
@@ -225,16 +233,16 @@
 
                 <div class="title-box">
 
-                    <h2>Contacts</h2>
+                    <h2>Contact us</h2>
                     <div>
                         <ul>
                             <li> <a href="https://twitter.com/La27eregion" target="_blank">
-                                    <img src="images/about/transfo-twitter.png" alt="logo twitter">
+                                    <img src="images/about/transfo-twitter.png" alt="twitter logo">
                                 </a>
                             </li>
                             <li> <a href="https://www.linkedin.com/company/la-27e-r%C3%A9gion/?originalSubdomain=fr"
                                     target="_blank">
-                                    <img src="images/about/transfo-linkedin.png" alt="logo linkedin">
+                                    <img src="images/about/transfo-linkedin.png" alt="linkedin logo">
                                 </a>
                             </li>
                         </ul>
@@ -243,14 +251,12 @@
                 </div>
 
                 <div class="intro">
-                    <p>
-                        La transfo est un programme de
-                        <a href="http://www.la27eregion.fr" target="_blank">la 27e Région</a>.
+                    <p>La Transfo is a program of
+                        <a href=" http://www.la27eregion.fr/en/" target="_blank">the 27th Region</a>.
                     </p>
-                    <p>
-                        Pour en savoir plus sur la Transfo et les autres projets que nous développons, contactez nous
-                        par mail à <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
-                        ou par telephone au <a class="contact" href="tel:+33183629827">01 83 62 98 27</a>.
+                    <p>To find out more about La Transfo and the other projects we are developing, contact us by email
+                        at <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
+                        or by phone at <a class="contact" href="tel:+33183629827">00 33 (0)1 83 62 98 27</a>.
                     </p>
                 </div>
             </section>
