feat: cousin english WIP

--- a/cousins-english.html
+++ b/cousins-english.html
@@ -115,7 +115,7 @@
 
                     </div>
 
-                    <!-- TEMOIGNAGE PIA -->
+                    <!-- TESTIMONIE PIA -->
 
                     <div class="temoignages">
 
@@ -135,9 +135,9 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/pia/">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/pia/">lien vers le fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/pia/">link to the audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -150,10 +150,10 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/pia/2-PIA-Accompagnement.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/pia/2-PIA-Accompagnement.m4a">lien vers le
-                                            fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/pia/2-PIA-Accompagnement.m4a">link to the audio
+                                            file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -164,10 +164,9 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/pia/3-PIA-Impacts.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/pia/3-PIA-Impacts.m4a">lien vers le fichier
-                                            audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/pia/3-PIA-Impacts.m4a">link to the audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -178,10 +177,9 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/pia/4-PIA-a-refaire.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/pia/4-PIA-a-refaire.m4a">lien vers le fichier
-                                            audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/pia/4-PIA-a-refaire.m4a"></a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -193,9 +191,9 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/pia/5-PIA-MOOC.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/pia/5-PIA-MOOC.m4a">lien vers le fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/pia/5-PIA-MOOC.m4a">link to the audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -244,10 +242,10 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/labo-creuse/1-NicolasTaillandier.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/labo-creuse/1-NicolasTaillandier.m4a">lien vers le
-                                            fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/labo-creuse/1-NicolasTaillandier.m4a">link to the
+                                            audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -259,10 +257,10 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/labo-creuse/2-NicolasTaillandier.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/labo-creuse/2-NicolasTaillandier.m4a">lien vers le
-                                            fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/labo-creuse/2-NicolasTaillandier.m4a">link to the
+                                            audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -274,10 +272,10 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/labo-creuse/3-NicolasTaillandier.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/labo-creuse/3-NicolasTaillandier.m4a">lien vers le
-                                            fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/labo-creuse/3-NicolasTaillandier.m4a">link to the
+                                            audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -289,10 +287,10 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/labo-creuse/4-NicolasTallandier.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/labo-creuse/4-NicolasTallandier.m4a">lien vers le
-                                            fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/labo-creuse/4-NicolasTallandier.m4a">link to the
+                                            audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
@@ -304,10 +302,10 @@
                                 <audio controls>
 
                                     <source src="assets/audio/cousins/labo-creuse/5-NicolasTallandier.m4a">
-                                    <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="assets/audio/cousins/labo-creuse/5-NicolasTallandier.m4a">lien vers le
-                                            fichier audio</a>
-                                        pour le télécharger.
+                                    <p>Your browser does not support HTML audio. Here is a
+                                        <a href="assets/audio/cousins/labo-creuse/5-NicolasTallandier.m4a">link to the
+                                            audio file</a>
+                                        to download it.
                                     </p>
 
                                 </audio>
